fix(Theme): add dark mode provider and theme switcher.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
   --background: #f3f3f3;
   --foreground: #171717;
 }
+
 
 @theme inline {
   --color-background: var(--background);
@@ -19,21 +22,84 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme dark {
+  --color-background: var(--background);
+  --color-foreground: white;
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+@theme light {
+  --color-background: var(--background);
+  --color-foreground: black;
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
 }
 
-.embla {  overflow: hidden;}
+* {
+  @apply transition-colors duration-700;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+
+body {
+  @apply bg-[#ffff] text-[#171717] dark:bg-[#0a0a0a] dark:text-[#ededed]
+
+   
+}
+
+.embla {  overflow: hidden; }
 .embla__container {  display: flex;}
-.embla__slide {  flex: 0 0 100%;  min-width: 0;}
+.embla__slide {  flex: 0 0 100%;  min-width: 0;  resize: both;  overflow: auto;}
 .embla__viewport {  overflow: hidden;  cursor: move;  cursor: grab;}
 .embla__viewport:active {  cursor: grabbing;}
 
-.slider_image { @apply object-contain h-auto max-w-full
-}
+.slider_image { @apply object-contain h-auto max-w-full  }
+
 
 .first_latter::first-letter {
   @apply uppercase tracking-widest text-7xl font-bold  float-start
+}
+
+.menu li:hover {
+  @apply transition ease-in-out hover:scale-110 delay-50 duration-500 
+}
+
+.section {
+  @apply mt-16 text-gray-950 dark:text-white
+}
+
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
+
+@theme {
+  --shadow-box-shadow-first: 0px 1px 0px var(--shadow-color);
+  --color-button-border-color: var(--border-color);
+  --color-hover-background: var(--hover-background);
+  --color-active-background: var(--active-background);
+}
+
+@layer base {
+  :root {
+    --shadow-color: rgba(55, 53, 47, 0.09);
+    --border-color: rgba(55, 53, 47, 0.09);
+    --hover-background: rgba(55, 53, 47, 0.06);
+    --active-background: rgba(55, 53, 47, 0.16);
+  }
+  .dark {
+    --shadow-color: rgba(255, 255, 255, 0.094);
+    --border-color: rgba(255, 255, 255, 0.094);
+    --hover-background: rgba(255, 255, 255, 0.055);
+    --active-background: rgba(255, 255, 255, 0.03);
+  }
 }
